# pico-alarm-clock

./: CHANGELOG.md  CMakeLists.txt  README.md  alarm.c  alarm.h  helpers.c  helpers.h  main.c  node.c  node.h  settings.c
images/: MenuFlow.drawio
images/circuit/: circuit-cache.lib  circuit.kicad_pcb  circuit.pro  circuit.sch  circuit.sch-bak  sym-lib-table
src/: .main.c.swp  .node.c.swp  CMakeLists.txt  alarm.c  alarm.h  helpers.c  helpers.h  main.c  node.c  node.h  pins.h  settings.c  settings.h  song_def.c  song_def.h  song_deff.c  song_deff.h  timeout_timer.c  timeout_timer.h
